projetGL/src/test/deca/codegen/valid/ourTest/test_valid_TranstypageChangementValeur.deca
//  Teste de transtypage + changement des valeurs des attributs
// Resultats:
//  10  7

class A{
    int x = 10;
}

class B extends A{
    int y = 10;
}

{
    B b = new B();
    A a = new A();
    println(a.x);
    b.x = 7;
    a = (A)(b);
    println(a.x);
}
